# RecuperaGhost

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: banner.rs  drives.rs  lib.rs  main.rs  updater.rs  util.rs
src/clone/: mod.rs
src/gui/: mod.rs  theme.rs
src/recovery/: mod.rs
src/scanner/: mod.rs
src/signatures/: mod.rs
src/ui/: mod.rs
