[package]
name = "recupe_ghost"
version = "0.3.0"
edition = "2021"
authors = ["El_Becerril"]
description = "RecupeGhost - El Detective de Archivos Perdidos"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
dialoguer = "0.11"
colored = "2.1"
console = "0.15"
anyhow = "1.0"
chrono = "0.4"
ureq = { version = "2.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.25"
