[package]
name = "recupe_ghost"
version = "0.5.2-beta.1"
edition = "2021"
authors = ["El_Becerril"]
description = "RecupeGhost - El Detective de Archivos Perdidos"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
dialoguer = "0.11"
colored = "2.1"
console = "0.15"
anyhow = "1.0"
chrono = "0.4"
ureq = { version = "2.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4"
# GUI: opcional, detrás del feature `gui`. Así el binario CLI NO arrastra las librerías gráficas
# (más chico, y menos superficie nueva para el antivirus). La GUI se compila con --features gui.
eframe = { version = "0.29", optional = true }
# Diálogos nativos de "elegir carpeta". Tipear rutas a mano es lo peor de los dos mundos en una
# interfaz gráfica: el público de esta herramienta no sabe qué escribir ni dónde va a caer.
#
# En WINDOWS (el target que se distribuye) su única dependencia es `windows-sys`, que eframe/winit
# ya arrastran: llama a IFileDialog, la misma API COM que usa cualquier programa de Windows. O sea
# que no agrega superficie nueva para el antivirus. En Linux se elige el backend `gtk3`, que enlaza
# las librerías del sistema, en vez del default `xdg-portal`, que arrastraría tokio y zbus enteros
# solo para el entorno de desarrollo.
rfd = { version = "0.15", default-features = false, features = ["gtk3"], optional = true }

[features]
gui = ["dep:eframe", "dep:rfd"]

[[bin]]
name = "recupe_ghost"
path = "src/main.rs"

[[bin]]
name = "recupe_ghost_gui"
path = "src/bin/recupe_ghost_gui.rs"
required-features = ["gui"]

[dev-dependencies]
tempfile = "3.25"

# Solo para la compilación del target Windows: embebe metadata de versión en el .exe
# (ProductName, versión, autor, descripción). Un binario con esta info se parece a software
# legítimo; sin ella sale como un blob anónimo, lo que aumenta los falsos positivos de antivirus.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
